# lambda

./: .gitignore
Personal Projects/: playground.py
Personal Projects/ipynbifier/: ipynbifier.py
Personal Projects/rob_inputs/: terminal_inputs.py
Personal Projects/test_application/testapp/: __init__.py  app.py  models.py  tweeter.sqlite3
Personal Projects/test_application/testapp/templates/: calculator.html  eat_the_rich.html  index.html  products.html
Unit 2/: Project 2.ipynb  importances.py  importances_graph.py  playground.py  proj2models.py  project2.py
Unit 2/files/: importances2.csv  important.csv  lendingdesc.txt
Unit 3/Sprint 1/: acme.py  acme_report.py  acme_test.py  part7.md
Unit 3/Sprint 2/: Part4Answers.md  challenge.md  demo_data.py  demo_data.sqlite3  northwind.py
Unit 3/Sprint 3/: aq_dashboard.py  db.sqlite3
Unit 3/docker/: Dockerfile  upper.py
Unit 3/holidaymove_buddyiq/: holidaymove_buddyiq.py
Unit 3/lambdata-RCD2020/: README.md  helper_functions.py  setup.cfg
Unit 3/lambdata-RCD2020/src/the_package/: helper_functions.py  test_helper_functions.py
Unit 3/rpg/: README.md  holidaymove_buddyiq.py  mongoCorrection.py  mongoQueries.py  mongoRPG.py  queries.py  rpgholidaymove_buddyiq.sqlite3
Unit 3/titanic/: insert_titanic.py  titanicQueries.py
Unit 3/tweetApp/tweeter/: __init__.py  app.py  models.py  tweeter.sqlite3
Unit 3/tweetApp/tweeter/templates/: index.html  tweets.html  users.html
Unit 3/twittApp/twitread/: app.py  twitter.sqlite3
Unit 3/twittApp/twitread/templates/: index.html
