[metadata]
name = lambdata-RCD2021
version = 0.0.1
author = Robert
author_email = dobertravis@icloud.com
description = A small pandas example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RCD2020/lambda/tree/main/Unit%203/lambdata-RCD2020
project_urls =
    Bug Tracker = https://github.com/RCD2020/lambda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src